--- a/WpfApp_final_MasterMind/MainWindow.xaml
+++ b/WpfApp_final_MasterMind/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1_final_MasterMind"
         mc:Ignorable="d"
-        Title="MasterMind" Height="450" Width="800" Loaded="Window_Loaded"  KeyDown="Window_KeyDown">
+     Title="MasterMind" Height="795" Width="600" Loaded="Window_Loaded"  KeyDown="Window_KeyDown">
+
     <Grid RenderTransformOrigin="0.497,0.52">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -14,12 +15,11 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="35px" />
+            <RowDefinition Height="30px" />
             <RowDefinition Height="100px" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="50" />
-
+            <RowDefinition Height="40px" />
+            <RowDefinition Height="40px" />
 
         </Grid.RowDefinitions>
         <ComboBox Grid.Column="0" Grid.Row="0" x:Name="comboBox1"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="colorChange">
@@ -59,9 +59,20 @@
         <Label x:Name="label2" Grid.Column="1" Grid.Row="1"/>
         <Label x:Name="label3" Grid.Column="2" Grid.Row="1"/>
         <Label x:Name="label4"  Grid.Column="3" Grid.Row="1"/>
-        
-        <Button x:Name="checkButton" Content="Check Code"  Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" Click="checkButton_Click" FontWeight="Bold"/>
-        <TextBox x:Name="solutionTextBox" BorderThickness="2" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" Height="17" FontSize="9" Visibility="Visible" Margin="0,14,0,0" FontWeight="Bold"/>
+
+        <Button x:Name="checkButton" Content="Check Code"  Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Click="checkButton_Click" FontWeight="Bold" Margin="0,36,0,4" Grid.RowSpan="2"/>
+        <TextBox x:Name="solutionTextBox" BorderThickness="2" HorizontalAlignment="Center" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="180" Height="17" FontSize="9" Visibility="Visible" FontWeight="Bold" Grid.Column="1" Grid.ColumnSpan="2"/>
         <Label x:Name="pointslabel" Grid.Column="3" Grid.Row="4" HorizontalContentAlignment="Center" ></Label>
+        <Grid x:Name="historiekgrid" Grid.ColumnSpan="4" Grid.Row="2" Margin="0,5,0,0">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+        </Grid>
     </Grid>
+   
 </Window>
