--- a/WpfApp_final_MasterMind/MainWindow.xaml
+++ b/WpfApp_final_MasterMind/MainWindow.xaml
@@ -5,9 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1_final_MasterMind"
         mc:Ignorable="d"
-     Title="MasterMind" Height="795" Width="600" Loaded="Window_Loaded"  KeyDown="Window_KeyDown" Closing="Window_Closing_1">
+     Title="MasterMind" Height="873" Width="1040" Loaded="Window_Loaded"  KeyDown="Window_KeyDown" Closing="Window_Closing_1">
+    <Window.Background>
+        <ImageBrush ImageSource="/assets/gb-gba-overlays-free-to-a-good-home-v0-d527iycm725b1.png" Stretch="Fill"/>
+    </Window.Background>
 
-    <Grid RenderTransformOrigin="0.497,0.52">
+    <Grid RenderTransformOrigin="0.497,0.52" Margin="128,23,126,38">
+        <Grid.Background>
+            <SolidColorBrush Color="#FF9CA59F" Opacity="100"/>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -55,13 +61,13 @@
             <ComboBoxItem Background="Green" Content="Groen"/>
             <ComboBoxItem Background="Blue" Content="Blauw"/>
         </ComboBox>
-        <Label x:Name="label1" Grid.Column="0" Grid.Row="1"/>
+        <Label x:Name="label1" Grid.Column="0" Grid.Row="1" />
         <Label x:Name="label2" Grid.Column="1" Grid.Row="1"/>
         <Label x:Name="label3" Grid.Column="2" Grid.Row="1"/>
         <Label x:Name="label4"  Grid.Column="3" Grid.Row="1"/>
 
         <Button x:Name="checkButton" Content="Check Code" Grid.Row="3" Grid.ColumnSpan="4" Click="checkButton_Click" FontWeight="Bold" Margin="109,36,109,4" Grid.RowSpan="2"/>
-        <TextBox x:Name="solutionTextBox" BorderThickness="2" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="160" Height="30" FontSize="9" Visibility="Visible" FontWeight="Bold" Grid.ColumnSpan="2" Margin="117,0,0,0" HorizontalAlignment="Center"/>
+        <TextBox x:Name="solutionTextBox" BorderThickness="2" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Top" Width="160" Height="30" FontSize="9" Visibility="Visible" FontWeight="Bold" Margin="25,3,0,0" HorizontalAlignment="Left" Grid.Column="1"/>
         <Label x:Name="pointslabel" Grid.Column="2" Grid.Row="3" HorizontalContentAlignment="Center" Margin="11,5,118,9" Background="#FFDCD0D0" Grid.ColumnSpan="2" />
         <Grid x:Name="historiekgrid" Grid.ColumnSpan="4" Grid.Row="2" Margin="0,5,0,0">
 
@@ -73,6 +79,7 @@
             </Grid.ColumnDefinitions>
 
         </Grid>
+        <TextBlock x:Name="timerTextBlock" TextAlignment="Center" Background="White" HorizontalAlignment="Left" Margin="122,7,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="93" Grid.Row="3" Height="24" Grid.ColumnSpan="2" Visibility="Hidden" />
     </Grid>
 
 </Window>
